# smart-bookmarks

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: shemas.py
app/api/v1/routes/: user.py
app/db/: database.py  session.py  sessions.py
app/models/: user.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: register_user.py
