[tool.poetry]
name = "smart-bookmarks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.136.0"}
asyncpg = "^0.31.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.49"}
dotenv = "^0.9.9"
dishka = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
